# rust-img-vhd

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
include/: vhd.h
src/: capi.rs  dynamic.rs  error.rs  footer.rs  footer_build.rs  lib.rs  reader.rs
tests/: corruption.rs  qemu_validation.rs  synthetic.rs
