[package]
name = "am-img-vhd"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Pure-Rust VHD (Microsoft Virtual Hard Disk) reader. Fixed, dynamic, and differencing variants. Exposes a Rust API and a C ABI suitable for FFI from C/C++/Go/Swift."
repository = "https://github.com/antimatter-studios/rust-img-vhd"

[lib]
# Published as `am-img-vhd` on crates.io; consumers `use vhd::Reader`.
name = "vhd"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "vhd_tool"
path = "src/bin/vhd_tool.rs"

[dependencies]
# Block-device trait surface — `Qcow2Reader`-style integration.
am-fs-core = { path = "../rust-fs-core", version = "0.2" }

[dev-dependencies]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "unwind"

[profile.dev]
opt-level = 1
panic = "unwind"
